tests/snapshots/parse__function_call.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(add)\n  Function(main)\n\n"
stderr: ""
status: 0
