tests/snapshots/parse__function_pointer.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(add)\n  Function(multiply)\n  Function(main)\n\n"
stderr: ""
status: 0
