tests/snapshots/parse__function_pointer_struct.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(add)\n  StructDef(Ops)\n  Function(main)\n\n"
stderr: ""
status: 0
