tests/snapshots/parse__global_array.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  VarDecl(arr)\n  Function(main)\n\n"
stderr: ""
status: 0
