tests/snapshots/parse__global_init.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  VarDecl(x)\n  Function(main)\n\n"
stderr: ""
status: 0
