tests/snapshots/parse__global_modify.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  VarDecl(counter)\n  Function(main)\n\n"
stderr: ""
status: 0
