tests/snapshots/parse__global_multiple.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  VarDecl(a)\n  VarDecl(b)\n  VarDecl(c)\n  Function(main)\n\n"
stderr: ""
status: 0
