tests/snapshots/parse__include_guard.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(get_value)\n  Function(main)\n\n"
stderr: ""
status: 0
